@@ -1,3 +1,8 @@
+10 February 2009
++ Patch #2500049 - Olivier Sannier : prepares a string for output in
+  the resulting XML stream. It ensures it does not contain any XML
+  entities and that the line breaks are output correctly. 
+
 Version 0.3.0
 -----------------------------------------------------------------------------
 27 October 2008
